<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camtest</string>
    <string name="settings">Settings</string>


    <string name="upload_setup">Picture Upload</string>
    <string name="webcam_settings">Settings</string>
    <string name="activity_settings">Activity</string>

    <string name="density_title">Density: Unknown Screen</string>
    <string name="camera_alert">Device has only one camera!</string>
    <string name="switch_cam">Switch Camera</string>

    <string name="uploading">Uploading current picture to\n%1$s ...</string>
    <string name="mailing">Sending picture to\n%1$s ...</string>
    <string name="storing">Storing picture ...</string>
    <string name="result">Status: %1$s</string>


    <string name="title_picscale">Scale Mode</string>
    <string name="summary_picscale">Select how the camera picture is scaled to fit the custom size.</string>
    <string name="dialog_title_picscale">Scale Mode</string>


    <string name="title_imprintalign">Text Alignment</string>
    <string name="summary_imprintalign">Where is the text placed in the horizontal line.</string>
    <string name="dialog_title_imprintalign">Text Align</string>


    <string name="battery_imprint_default" formatted="false">Battery %d%% %.1f&#xb0;C</string>

    <string name="key_pref_nativeyuv">key_pref_nativeyuv</string>
    <string name="key_pref_jpeg_quality">key_pref_jpeg_quality</string>
    <string name="key_pref_preview_size_index_def">key_pref_preview_size_index_def</string>
    <string name="key_pref_camera_index_def">key_pref_camera_index_def</string>
    <string name="key_pref_flash_light_def">key_pref_flash_light_def</string>
    <string name="key_pref_server">key_pref_server</string>
    <string name="key_pref_local_port">key_pref_local_port</string>
    <string name="key_pref_client">key_pref_client</string>
    <string name="key_pref_remote_addr">key_pref_remote_addr</string>
    <string name="key_pref_remote_port">key_pref_remote_port</string>
    <string name="key_pref_http_server">key_pref_http_server</string>
    <string name="key_pref_http_local_port">key_pref_http_local_port</string>
    <string name="key_pref_ar_effects">key_pref_ar_effects</string>
    <string name="key_pref_ar_background">key_pref_ar_background</string>
    <string name="key_pref_ar_chromakey">key_pref_ar_chromakey</string>
    <string name="key_pref_dsp_use_filter">key_pref_dsp_use_filter</string>
    <string name="key_pref_dsp_filter">key_pref_dsp_filter</string>
    <string name="key_pref_resolution">key_pref_resolution</string>
    <string name="key_pref_draw_fps">key_pref_draw_fps</string>
    <string name="key_pref_use_java_vj">key_pref_use_java_vj</string>
    <string name="key_ar_effects">key_ar_effects</string>
    <string name="key_ar_max_faces">key_ar_max_faces</string>
    <string name="key_ar_background">key_ar_backround</string>
    <string name="key_ar_hat">key_ar_hat</string>
    <string name="key_ar_coolface">key_ar_coolface</string>
    <string name="key_ar_moustache">key_ar_moustache</string>
    <string name="key_ar_beard">key_ar_beard</string>

    <string name="draw_fps">Draw FPS</string>
    <string name="help_draw_fps">Draw the frames per second count over the video view</string>
    <string name="resolution">Resolution</string>
    <string name="help_resolution">Select the resolution of the resulting image</string>
    <string name="use_java_vj">Java Viola-Jones detector</string>
    <string name="use_java_vj_help">Use the custom Viola-Jones face detection algorithm instead of the one provided by the Android platform</string>
    <string name="ar_effects">Ar Effects</string>
    <string name="help_ar_effects">Add visuals to augment the reality</string>
    <string name="ar_max_faces">Max. face count</string>
    <string name="help_ar_max_faces">The maximum number of faces in a picture</string>
    <string name="ar_background">Replace background</string>
    <string name="help_ar_background">Replace the background behing the human body</string>
    <string name="ar_hat">Draw a hat</string>
    <string name="help_ar_hat">Draw a hat over the detected face</string>
    <string name="ar_coolface">Draw a cool face</string>
    <string name="help_ar_coolface">Replace the detected face with a cool one</string>
    <string name="ar_moustache">Draw moustache</string>
    <string name="help_ar_moustache">Draw moustache on top of the detected face</string>
    <string name="ar_beard">Draw beard</string>
    <string name="help_ar_beard">Draw a beard over the detected face</string>

    <string name="image_effects">Image Effects</string>
    <string name="use_dsp_filter">Filter Image</string>
    <string name="use_dsp_filter_help">Process image and add visual effects</string>
    <string name="filter_list">List of filters</string>
    <string name="filter_list_help">Choose one of the filters to be applied to image</string>


    <string name="streaming_on">Stop Streaming</string>
    <string name="streaming_off">Start Streaming</string>
    <string name="frontcam_off">Use Rear Cam</string>


    <string name="preferences">Preferences</string>
    <string name="focus">Focus Camera</string>

    <string name="device_preferences">Device Preferences</string>
    <string name="nativeyuv">Native YUV2RGB</string>
    <string name="help_nativeyuv">Use the native library to decode YUV to RGB. Disable this option if you are experiencing problems</string>
    <string name="quality">Quality</string>
    <string name="help_quality">MJPG quality is a characteristic of video transmission/processing system, a formal or informal measure of perceived video degradation</string>

    <string name="camera_preferences">Camera Options</string>
    <string name="frontcam_on">Use Front Cam</string>
    <string name="help_frontcam">Use the Front Camera, which is facing same as the screen of your phone.</string>
    <string name="flash_light">Flash Light</string>
    <string name="help_flash_light">Activate the flash Light</string>

    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>

    <string name="http_preferences">HTTP Preferences</string>
    <string name="start_http_server">HTTP Server</string>
    <string name="help_start_http_server">Stream video over HTTP using MJPG</string>
    <string name="http_local_port">Local HTTP port</string>
    <string name="help_http_local_port">Select the TCP port on which the video will be streamed</string>
</resources>

